syntax = "proto3";

package auth.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "auth/v1/basic.proto";

option go_package = "heytom-auth/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.auth.v1";
option java_outer_classname = "AuthProtoV1";


// 策略服务
service Policy {
  rpc PageList(PagePolicyRequest) returns (PagePolicyResponse) {
    option (google.api.http) = {
      get: "/policy/list"
    };
  }
  rpc Get(GetPolicyRequest) returns (PolicyInfo) {
    option (google.api.http) = {
      get: "/policy/{id}"
    };
  }
  rpc Create(CreatePolicyRequest) returns (PolicyInfo) {
    option (google.api.http) = {
      post: "/policy"
      body: "*"
    };
  }
  rpc Update(UpdatePolicyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/policy/{id}"
      body: "*"
    };
  }
  rpc Delete(DeletePolicyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/policy/{id}"
    };
  }
}

// 策略相关消息
message PolicyInfo {
  int64 id = 1;
  string name = 2;
  string code = 3;
  string description = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message DeletePolicyRequest {
  int64 id = 1;
}

message CreatePolicyRequest {
  string name = 1;
  string code = 2;
  string description = 4;
}

message UpdatePolicyRequest {
  int64 id = 1;
  string name = 2;
  string code = 3;
  string description = 5;
}

message GetPolicyRequest {
  int64 id = 1;
}

message PagePolicyRequest {
  PageRequest page = 1;
}

message PagePolicyResponse {
  int64 total = 1;
  repeated PolicyInfo policies = 2;
}

